# esp-serial-flasher

./: .pre-commit-config.yaml  CMakeLists.txt
examples/openwrt_example/: CMakeLists.txt
examples/openwrt_example/Src/: main.c  read_bin.c  read_bin.h
port/: linux_port.c  linux_port.h
